<resources>
    <string name="app_name">FaceAssist</string>


    <string name="def_perm_title">Permissions</string>
    <string name="def_perm_text">FaceAssist needs permission to perform this action.</string>

    <string name="camera_perm_title">Take photos with FaceAssist\'s camera</string>
    <string name="camera_perm_text">FaceAssist needs permission to use your phones camera to take
        pictures.
    </string>

    <string name="gallery_perm_title">Access images on your phone</string>
    <string name="gallery_perm_text">FaceAssist needs permission to access images on your phone.</string>

    <string name="no_lib_title">Libraries not ready</string>
    <string name="no_lib_text">The libraries needed for this application are not ready yet. Please try again later.</string>

    <!-- drawer menu strings -->
    <string name="menu_title_create">Add face</string>
    <string name="menu_title_current_faces">Current faces</string>
    <string name="menu_title_settings">Settings</string>

    <string name="client_id">850880049972-emo9tr44ajo4c32sbedic5papt355rpk.apps.googleusercontent.com</string>
    <string name="server_comm_error">Failed to communicate with server</string>
    <string name="error_getting_google_account">Error retrieving account</string>
    <string name="security_update_unavailable">Phone\'s security could not be updated</string>
    <string name="security_updating">Updating phone\'s security. Please try again later</string>
    <string name="error_updating_secutiry_title">Error updating security</string>
    <string name="error_updating_security">You can not log in unless you update your phones
        security.
    </string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="connection_failed">Connection failed</string>
    <string name="failed_connection">Failed to get response from server</string>
    <string name="error_communicating_server">Error communicating with server</string>
    <string name="error_detecting_face">Error detecting faces</string>
    <string name="error_decoding_image">Error decoding image</string>
    <string name="select_face">Select a face</string>
    <string name="processing_image">Processing image…</string>
    <string name="loading_image">Loading image…</string>
    <string name="scale_crop">Scale and crop image</string>
    <string name="error_cropping">Error cropping image</string>
    <string name="name">Name</string>
    <string name="relationship">Relationship</string>
    <string name="next">Next</string>
    <string name="notes">Notes</string>
    <string name="submit">submit</string>
    <string name="required_field">This field is required</string>
    <string name="not_enough_images">Not enough image</string>
    <string name="uploading">Uploading face in background…</string>
    <string name="log_out">Log out</string>
    <string name="all_faces">All Faces</string>
    <string name="birthday">Birthday</string>
    <string name="no_results_found">No results found. Tap to refresh.</string>
    <string name="no">NO</string>
    <string name="yes">yes</string>
    <string name="test_date">1/1/2017</string>
    <string name="model_updated">Model updated.</string>
    <string name="confirmed">Confirmed</string>
    <string name="history">History</string>
    <string name="friends">Friends</string>
    <string name="albums">Albums</string>


</resources>
