<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <item android:id="@+id/menu_create"
              android:checkable="false"
              android:checked="false"
              android:icon="@drawable/ic_action_add_circle"
              android:title="@string/menu_title_create"
        />

        <item android:id="@+id/menu_current"
              android:checkable="false"
              android:checked="false"
              android:icon="@drawable/ic_action_face"
              android:title="@string/menu_title_current_faces"
        />

        <item android:id="@+id/history"
              android:checkable="false"
              android:checked="false"
              android:icon="@drawable/ic_action_child_care"
              android:title="@string/history"
        />

        <item android:id="@+id/log_out"
              android:checkable="false"
              android:checked="false"
              android:icon="@drawable/ic_action_person"
              android:title="@string/log_out"
        />


    </group>


</menu>